Fixed cover, footer, header

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
         </article>
       </section>
       <section class="cover">
-        <h2 class="cover__title">До Байкала «на собаках»</h2>
-        <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>
+        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
+        <a class="cover__subtitle" href="https://stampsy.com/na-elektrichkakh-do-baikala">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</a>
         <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala"></a>
       </section>
     </main>
