rewrite Cover block

--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
         </article>
       </section>
       <section class="cover">
-        <a class="cover__title" href="https://stampsy.com/na-elektrichkakh-do-baikala">До Байкала «на собаках»</a>
-        <a class="cover__subtitle" href="https://stampsy.com/na-elektrichkakh-do-baikala">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</a>
-        <a class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala"></a>
+        <a class="cover__content" href="https://stampsy.com/na-elektrichkakh-do-baikala">
+          <h1 class="cover__title">До Байкала «на собаках»</h1>
+          <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала на электричках.</p>       
+        </a>
+        <div class="cover__overlay"></div>
       </section>
     </main>
     <footer class="footer">
